--- a/app/partials/singleRow.html
+++ b/app/partials/singleRow.html
@@ -17,9 +17,14 @@
         <td><input class="form-control" ng-model="product.TEXT"></td>
     </tr>
     <tr>
+        <td>Gemaakt door</td>
+        <td>&nbsp;</td>
+        <td><input class="form-control" ng-model="product.AUD_CREATED_BY"></td>
+    </tr>
+    <tr>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
-        <td><button  ng-model="button" ng-hide="nothingToCommit" ng-click="update()">Leg vast
+        <td><button  ng-model="button" ng-hide="nothingToCommit" ng-click="updateItem()">Leg vast
         </button> </td>
     </tr>
 
