--- a/app/partials/singleRow.html
+++ b/app/partials/singleRow.html
@@ -1,4 +1,4 @@
-<p>This is the partial for SINGLEROW</p>
+<p>This is the partial for SINGLEROW Read Only</p>
 <h1>{{product.NAME}}</h1>
 <table width="50%" class="table-responsive" bgcolor="#d3d3d3">
     <tr>
