--- a/app/partials/multiRow.html
+++ b/app/partials/multiRow.html
@@ -14,7 +14,7 @@
         </td>
         <td>{{record.NAME}}</td>
         <td>{{record.TEXT}}</td>
-        <td><button class="btn btn-danger" ng-click="record(emp.ID)">Remove</button> </td>
+        <td><button class="btn btn-danger" ng-click="delete($index)">Remove</button> </td>
         <td><button class="btn btn-warning" ng-click="edit($index)">Edit</button> </td>
     </tr>
     <tr>
