--- a/app/partials/multiRow.html
+++ b/app/partials/multiRow.html
@@ -1,24 +1,39 @@
 <h1>Dit is de Multi Row view</h1>
-<table class="table">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>NAME</th>
-        <th>TEXT</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="record in recordSet.record" id="row_{{record.ID}}">
-        <td>
-            <a href="#/edit/{{$index}}">{{record.ID}}</a>
-        </td>
-        <td>{{record.NAME}}</td>
-        <td>{{record.TEXT}}</td>
-        <td><button class="btn btn-danger" ng-click="delete($index)">Remove</button> </td>
-        <td><button class="btn btn-warning" ng-click="edit($index)">Edit</button> </td>
-    </tr>
-    <tr>
-        <td><button class="btn btn-warning" ng-click="add()">Add</button> </td>
-    </tr>
-    </tbody>
-</table>
+<form name="MRForm" novalidate ng-submit="executeQuery()">
+    <table class="table">
+        <thead>
+        <tr>
+            <td colspan="3" style="
+                                font-family: monospace;
+                                font-weight: bold;
+                                font-size: larger;">Filteren op veld</td>
+        </tr>
+        <tr>
+            <th>ID</th>
+            <th>NAME</th>
+            <th>TEXT</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="record in recordSet.record" id="row_{{record.ID}}">
+            <td>
+                <a href="#/edit/{{$index}}">{{record.ID}}</a>
+            </td>
+            <td>{{record.NAME}}</td>
+            <td>{{record.TEXT}}</td>
+            <td><button class="btn btn-danger" ng-click="delete($index)">Remove</button> </td>
+            <td><button class="btn btn-warning" ng-click="edit($index)">Edit</button> </td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>
+                <input name="searchField" placeholder="Zoek op..." ng-model="MR.filterValueName"/>
+                <input name="doButton" type="submit" value="Zoek"/></td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td><button class="btn btn-warning" ng-click="add()">Add</button> </td>
+        </tr>
+        </tbody>
+    </table>
+</form>
