Meterplaatsing: werkende wizard (behalve standen)

--- a/app/partials/meterOpnamen.html
+++ b/app/partials/meterOpnamen.html
@@ -76,7 +76,7 @@
             <td>{{$index+1}}</td>
             <td>{{record.COP_NAME}}</td>
             <td>{{record.WHEELS}}</td>
-            <td><input class="invoerveld" ng-model="counters.stand"/></td>
+            <td><input size="7" class="invoerveld" ng-model="record.stand"/></td>
         </tr>
         <tr>
             <td>
