--- a/app/partials/meterOpnamen.html
+++ b/app/partials/meterOpnamen.html
@@ -9,14 +9,14 @@
 <div class="geselecteerd"><span>Geselecteerde meter: {{meters.selectedRow.FACTORY_NUMBER}} (Categorie {{meters.selectedRow.CAT_NAME}})</span></div>
 <br/>
 <div class="meterOpnameBox" align="left">
-    <form name="invoerenMeterOpname">
+    <form name="invoerenMeterOpname" novalidate>
         <table>
             <tr>
                 <td>
                     <span class="label invoer">Datum plaatsing/opname</span>
                 </td>
                 <td>
-                    <input class="invoerveld"
+                    <input class="form-control"
                            size="10"
                            name="datumVanOpname"
                            ng-minlength="10"
@@ -29,69 +29,81 @@
                     <span class="label invoer">Opnamewijze</span>
                 </td>
                 <td>
-                    <select ng-model="meterReadings.record.METHOD">
+                    <select class="form-control" ng-model="meterReadings.record.METHOD">
                         <option value="GESCHAT">Geschat</option>
                         <option value="KLANT OPNAME">Klantopname</option>
                         <option value="METEROPNEMER">Meteropnemer</option>
                     </select>
                 </td>
                 <td width="130px" height="52">
-                    <div ng-show="meterReadings.insertInOperation"><img src="images/throbber.gif"/></div>
-                    <div ng-show="meterReadings.insertSuccessful"><img src="images/vink.png"/></div>
+                    <div ng-show="createMeterPlacement.InOperation"><img src="images/throbber.gif"/></div>
+                    <div ng-show="createMeterPlacement.Successful"><img src="images/vink.png"/></div>
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <input class="btn btn-warning"
-                           name="doButton"
-                           type="submit"
-                           value="Leg vast"
-                           ng-show="!zoekmeter.$invalid"
-                           ng-click="meterPlacements.register()"/>
-                </td>
-            </tr>
+
         </table>
+
+        <div class="meterOpnameBox">
+            <span style="font-size: 12pt">De volgende plaatsingsstanden moeten worden opgegeven bij dit type meter</span>
+            <table class="table" width="100%">
+                <thead>
+                <tr>
+                    <th width="20%">Aangemaakt op</th>
+                    <th>Telwerksoort</th>
+                    <th>Aantal wielen</th>
+                    <th width="*">Stand</th>
+                </tr>
+                </thead>
+                <tbody border="0">
+                <tr ng-repeat="record in counters.recordSet.record" id="row_{{$index+1}}">
+                        <td>{{record.MRT_AUD_DATE_CREATED}}
+                        </td>
+                        <td>{{record.COP_NAME}}</td>
+                        <td>{{record.WHEELS}}</td>
+                        <td>
+                            <ng-form name="innerForm">
+                            <table class="innerTable">
+                                <tr>
+                                    <td>
+                                        <input size="7"
+                                               name="STAND"
+                                               class="form-control stand"
+                                               ng-pattern="stand.pattern"
+                                               ng-required="true"
+                                               ng-model="record.STAND"/>
+                                    </td>
+                                    <td>
+                                        <span class="alert alert-warning" ng-show="innerForm.STAND.$error.pattern">Alleen cijfers toegestaan</span>
+                                        <span class="alert alert-warning" ng-show="innerForm.STAND.$error.required">Verplicht</span>
+                                        <span class="alert alert-success" ng-show="innerForm.$valid">Ok</span>
+                                    </td>
+                                </tr>
+                            </table>
+                            </ng-form>
+                        </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input class="btn btn-warning"
+                               name="doButton"
+                               type="submit"
+                               value="Leg vast"
+                               ng-show="!zoekmeter.$invalid"
+                               ng-click="createMeterPlacement()"/>
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+        </div>
+
     </form>
     <div class="queryBusy" ng-show="queryInOperation">
         <span>Wegschrijven...</span>
     </div>
 </div>
 <br/>
-<div class="meterOpnameBox" ng-show="meterReadings.insertSuccessful">
-  <h4>Plaatsingstanden</h4>
-  <span style="font-size: 12pt">De volgende plaatsingsstanden moeten worden opgegeven bij dit type meter</span>
-<table class="table">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Telwerksoort</th>
-            <th>Aantal wielen</th>
-            <th>Stand</th>
-            <th>&nbsp;</th>
-            <th>&nbsp;</th>
-        </tr>
-    </thead>
-    <tbody border="0">
-        <tr  ng-repeat="record in counters.recordSet.record" id="row_{{record.ID}}">
-            <td>{{$index+1}}</td>
-            <td>{{record.COP_NAME}}</td>
-            <td>{{record.WHEELS}}</td>
-            <td><input size="7" class="invoerveld" ng-model="record.stand"/></td>
-        </tr>
-        <tr>
-            <td>
-                <input class="btn btn-warning"
-                       name="doButton"
-                       type="submit"
-                       value="Leg vast"
-                       ng-show="!zoekmeter.$invalid"
-                       ng-click="meterReadings.register()"/>
-            </td>
-        </tr>
 
-    </tbody>
-</table>
-</div>
 
 <alert
         type="danger"
